Switch to A5 paper.
I got the first proofs back, and I think I'd like a smaller form factor.

--- a/back.tex
+++ b/back.tex
@@ -1,4 +1,4 @@
-\setlength\parskip{0.8\baselineskip}
+\setlength\parskip{0.6\baselineskip}
 \setlength\parindent{0pt}
 
 \chapter{Additional Resources}
@@ -7,30 +7,27 @@
 \section{For \texorpdfstring{\LaTeX}{LaTeX}}
 
 As promised at the start, this book is incomplete.
-To keep things short,
+To keep it short,
 major \LaTeX{} features---like figures, captions, tables, graphics,
 and bibliographies---haven't been discussed.
 Use some of these resources to fill in the gaps:
-
-\begin{adjustwidth}{1.5em}{0pt}
+\begin{leftfigure}
 The \LaTeX{} Wikibook, at \https{en.wikibooks.org/wiki/LaTeX}
-
-The \TeX{} Stack Exchange, at \https{tex.stackexchange.com/}
 
 \textit{The Not So Short Introduction to \LaTeX}, \\
 available at \https{www.ctan.org/tex-archive/info/lshort/english/}
 
 The Share\LaTeX{} knowledge base, at \https{www.sharelatex.com/learn}
 
-\end{adjustwidth}
+The \TeX{} Stack Exchange, at \https{tex.stackexchange.com/}
+\end{leftfigure}
 
 \section{For typography}
 
 We've spent most of our time here focusing \emph{what} you can do with \LaTeX,
 and little on \emph{how} you should use it to create well-designed documents.
 Read on:
-
-\begin{adjustwidth}{1.5em}{0pt}
+\begin{leftfigure}
 \textit{Practical Typography}, by Matthew Butterick. \\
 Available (for free!) at \https{practicaltypography.com}
 
@@ -41,7 +38,7 @@ Available (for free!) at \https{practicaltypography.com}
 \textit{The Elements of Typographic Style}, by Robert Bringhurst
 
 \textit{Detail in Typography}, by Jost Hochuli
-\end{adjustwidth}
+\end{leftfigure}
 
 \backmatter
 
@@ -103,7 +100,7 @@ producing a design faithful to the original cold metal type.
 
 {\fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Boo}URW Futura}
 makes a few guest appearances.
-Designed by Paul Renner and originally released in 1927,
+Designed by Paul Renner and first released in 1927,
 Futura has found itself almost everywhere,
 from advertising and political campaigns to the moon.
 Douglas Thomas's recent history of the typeface,
