--- a/hello.tex
+++ b/hello.tex
@@ -60,7 +60,7 @@ Many classes are available---and you can even create your own---but common
 ones include \texttt{article}, \texttt{report}, \texttt{book},
 and \texttt{beamer}.\punckern\footnote{This last one is for slideshows.
 The name is the German term for a projector.}
-For your average document, \texttt{article} is probably a good choice.
+\texttt{article} is probably a good choice for the average document.
 The next line, \verb|% Say hello|,
 is a \introduce{comment}---anything placed after a percent symbol on a line
 is ignored by the engine,
@@ -80,18 +80,20 @@ times you hit the space bar.\punckern\footnote{Or the tab key}
 For example,
 \begin{leftfigure}
 \begin{lstlisting}
-The number  of   spaces    between words doesn't   matter. The
-same is true for sentences.
+The number  of   spaces    between words doesn't   matter.
+The same is true for space between sentences.
 
-An empty line ends the previous paragraph and starts the next.
+An empty line ends the previous paragraph and
+starts the next.
 \end{lstlisting}
 \end{leftfigure}
 yields
 \begin{leftfigure}
-\lm The number  of   spaces    between words doesn't   matter. The
-same is true for sentences.
+\lm The number  of   spaces    between words doesn't   matter.
+The same is true for space between sentences.
 
-An empty line ends the previous paragraph and starts the next.
+An empty line ends the previous paragraph and
+starts the next.
 \end{leftfigure}
 Notice that \LaTeX{} automatically follows typographic
 conventions, such as indenting new paragraphs and leaving more space after a
