--- a/history.tex
+++ b/history.tex
@@ -3,12 +3,12 @@
 \label{history}
 
 Donald Knuth is celebrated among programmers as
-the man who coined the term \emph{analysis of algorithms} in 1968
+the man who coined the term \emph{analysis of algorithms}
 and pioneered many computer science fundamentals we use today.
 Knuth is perhaps most famous for his ongoing magnum opus,
-\textit{The Art of Computer Programming}.
+\textit{The~Art of Computer Programming}.
 
-When the first volume of \acronym{taocp} was released that same year,
+When the first volume of \acronym{taocp} was released in 1968,
 it was printed the way most books had been since the turn of the century:
 with \introduce{hot metal} type.
 Each individual letter was cast from molten lead,
@@ -27,7 +27,7 @@ expected.\punckern\endnote{Knuth, \textit{Digital Typography} (Stanford, 1999), 
 
 The average author would have resigned themselves to this change and moved on,
 but Knuth took great pride in his books' appearances,
-especially their mathematics.
+especially for their mathematics.
 Around this time, he also discovered the growing field of digital typesetting,
 where glyphs are built from tiny dots,
 packed together at over 1,000 per inch.
