--- a/installation.tex
+++ b/installation.tex
@@ -4,7 +4,7 @@
 You install \LaTeX{} on your computer by downloading a \introduce{distribution}.
 It comes with:
 \begin{enumerate}
-\item \LaTeX, the program---the thing that turns text files into typeset
+\item \LaTeX, the program---the thing that typesets text files into
     documents.\footnote{We'll actually install multiple \LaTeX{} programs,
     but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
@@ -21,7 +21,7 @@ Each major operating system has its own \LaTeX{} distribution:
 \item[Windows] has Mik\TeX.
     Install it from \https{miktex.org/download}.
     Mik\TeX{} offers the unique ability to automatically download
-    additional packages if your document uses one that it can't find
+    additional packages whenever a document uses one that it can't find
     on your computer.
 
 \item[Linux and BSD] use \TeX{} Live.
