--- a/math.tex
+++ b/math.tex
@@ -1,7 +1,7 @@
 \chapter{Mathematics}
 \label{math}
 
-\LaTeX{} excels at typesetting mathematics, both within body text,
+\LaTeX{} excels at typesetting mathematics, both in body text,
 e.g., $x_n^2+y_n^2=r^2$, and as standalone formulas:
 \[\sum_{n=0}^{\infty} \frac{f^{(n)} (a)}{n!} (x - a)^n\]
 The former is created with \verb|$...$| or \verb|\(...\)|,
