--- a/micro.tex
+++ b/micro.tex
@@ -19,7 +19,7 @@ R Schlicht,
 (v2.7a, January 14, 2018), 4}
 \end{quote}
 
-In \LaTeX{}, microtypography is enabled and controlled with the
+In \LaTeX{}, microtypography is controlled with the
 \texttt{microtype} package.
 Its use is automatic---for the vast majority of documents, you should add
 \begin{leftfigure}
@@ -66,7 +66,7 @@ Of course, you can use package options to change this limit,
 or disable the feature entirely.}
 
 That this feature isn't currently available for \XeLaTeX{}.
-You'll need to use \LuaLaTeX{} to take advantage of it.
+You must use \LuaLaTeX{} to take advantage of it.
 
 \section{What next?}
 
