--- a/punctuation.tex
+++ b/punctuation.tex
@@ -67,7 +67,7 @@ serve different purposes:
     In \LaTeX{}, they are produced with the hyphen key (\,\texttt{-}\,).
 
 \item[En dashes] are for ranges such as ``pages 4--12''\quotekern,
-    or separations like the \mbox{``US--Canada} border''\quotekern.
+    and connected word terms, like the \mbox{``US--Canada} border''\quotekern.
     They are set with two adjacent hyphens (\,\texttt{--}\,).
 
 \item[Em dashes] can be used to separate clauses of a sentence.
@@ -75,7 +75,7 @@ serve different purposes:
     role.
     They are set with three hyphens (\,\texttt{---}\,).
 
-\item[Minus signs] are used exclusively for negative quantities and
+\item[Minus signs] are used for negative quantities and
     mathematical expressions.
     They are similar in length to an en dash,
     but sit at a different height.
@@ -104,7 +104,7 @@ I'm\dots{} not sure.
 As we discovered in our first example,
 \LaTeX{} inserts more space between periods and whatever
 follows them---presumably the start of the next sentence.
-Sometimes, this isn't what we want!
+This isn't always what we want!
 Consider honorifics like Mr.\ and Ms., for example.
 In situations like these, we also need to prevent \LaTeX{} from starting a
 new line after the period.
