--- a/why.tex
+++ b/why.tex
@@ -14,11 +14,13 @@ informs their expectations, and builds a subliminal brand for your
 work.\punckern\endnote{Erik Spiekermann, ``Type is Visible Language''
 (presented at Beyond Tellerrand, Düsseldorf, Germany, May 19--21, 2014),
 \https{www.youtube.com/watch?v=ggQpDu63kk0}}
+% Smoke test: a line should be 2-3 alphabets wide
+%\\ abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz
 \begin{leftfigure}
 \fontspec{TeX Gyre Termes}\fontsize{12bp}{24bp}\selectfont\raggedright
-Typography is why this sentence evokes memories of terrible essays
+Typography is why this sentence evokes memories of awful essays
 you wrote in school.
-Do you see many books that look this way? Why is that?
+Do many books look this way? Why not?
 \end{leftfigure}
 \medskip
 
@@ -65,40 +67,38 @@ offering you the same tools used by professional designers and publishers.
 Microsoft Word, Apple Pages, Google Docs,
 and LibreOffice Writer.
 These other applications operate on the principle of
-\introduce{What You See Is What You Get} \acronym{(wysiwyg)},
-where what's on screen is the same as what comes out of your
-printer.
+\introduce{What You See Is What You Get}
+\acronym{(wysiwyg)}, where what's on screen is the same
+as what comes out of your printer.
 \LaTeX{} is different. Here, documents are written as
 ``plain'' text files, using \introduce{markup} to specify
 how they should look.
-\LaTeX{} then composes your work from these source files,
-based on the formatting rules you give it.
 If you've done any web development, this is a similar
 process---just as \acronym{html} and \acronym{css} describe
-the page you want browsers to draw, your markup describes the
-appearance of your document to \LaTeX.
+the page you want browsers to draw, your markup describes
+the appearance of your document to \LaTeX.
 
+\begin{samepage}
 \begin{leftfigure}
 \begin{lstlisting}
 \LaTeX{} is an alternative to ``word processors'' like
 Microsoft Word, Apple Pages, Google Docs,
 and LibreOffice Writer.
 These other applications operate on the principle of
-\introduce{What You See Is What You Get} \acronym{(wysiwyg)},
-where what's on screen is the same as what comes out of your
-printer.
+\introduce{What You See Is What You Get}
+\acronym{(wysiwyg)}, where what's on screen is the same
+as what comes out of your printer.
 \LaTeX{} is different. Here, documents are written as
 ``plain'' text files, using \introduce{markup} to specify
 how they should look.
-\LaTeX{} then composes your work from these source files,
-based on the formatting rules you give it.
 If you've done any web development, this is a similar
 process---just as \acronym{html} and \acronym{css} describe
-the page you want browsers to draw, your markup describes the
-appearance of your document to \LaTeX.
+the page you want browsers to draw, your markup describes
+the appearance of your document to \LaTeX.
 \end{lstlisting}
 \captionof{figure}{The \LaTeX{} markup for the above paragraph}
 \end{leftfigure}
+\end{samepage}
 
 This might seem alien to you if you've never worked with a markup system before.
 However, it comes with a few advantages:
@@ -120,7 +120,7 @@ However, it comes with a few advantages:
     %fighting with Word about how it wrapped text around images.}
 
 \item You can define your own rules, then tweak them to instantly adjust
-    everywhere they're used.
+    every place they're used.
     For instance, the \verb|\introduce| and \verb|\acronym| commands seen above
     are my own creations. The former \introduce{italicizes} text, and
     the latter sets words in \acronym{small caps} with a bit of extra
@@ -130,7 +130,7 @@ However, it comes with a few advantages:
     \textbf{\itshape with this look} and set acronyms
     {\small\addfontfeature{LetterSpace=6} LIKE THIS},
     I just change the two lines that define those commands,
-    and every place in this book that uses them is immediately updated.
+    and every spot in this book that uses them is immediately updated.
 
 \item Since the document source is plain text,
     \begin{itemize}
