Font scaling: Don't use "look" twice

--- a/fonts.tex
+++ b/fonts.tex
@@ -150,7 +150,7 @@ Note that instead of typing out \monobox{Futura-Boo},
 
 \section{Scaling}
 
-Creating a cohesive look with multiple fonts is tricky,
+Creating a cohesive design with multiple fonts is tricky,
 especially since typefaces might look completely different
 at the same point size.
 \texttt{fontspec} can help a bit here by scaling fonts to match either the
