Fira for monospace font
I need something with multiple weights - mononoki looks _really_ scrawny
next to Garamond Premier Caption. Fira Medium looks pretty good next to
it, but Fira Modern (in body text) is a bit too thin. To compensate,
increase its scale by a few percent. Let's see how this prints...

--- a/back.tex
+++ b/back.tex
@@ -83,10 +83,10 @@ His revival is based on roman type by
 punchcutter Claude Garamond.
 Italics are inspired by the work of Garamond's contemporary Robert Granjon.
 
-Monospaced items are set in Matthias Tellen's
-\href{https://madmalik.github.io/mononoki/}{\texttt{mononoki}},
-a typeface designed to work well on both low-resolution computer monitors
-and in high-resolution print.
+Monospaced items are set in \texttt{Fira Mono},
+originally designed for Mozilla
+by Erik Spiekermann and Ralph du~Carrois.
+The Fira family draws from Spiekermann's past work on FF~Meta.
 
 Captions use
 \href{http://www.fontbureau.com/NHG/}{\textsf{\small Neue Haas Grotesk}},
