--- a/installation.tex
+++ b/installation.tex
@@ -16,7 +16,7 @@ It comes with:
 Each major operating system has its own \LaTeX{} distribution:
 \begin{description}
 \item[Mac OS] has Mac\TeX. Grab it from \http{www.tug.org/mactex}
-    and follow the instructions there to install it.
+    and install it per the instructions there.
 
 \item[Windows] has Mik\TeX.
     Install it from \https{miktex.org/download}.
