Fix: Use Latin Modern Mono in examples

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -88,10 +88,11 @@
 ]{Fira Mono}
 
 % We'll be using this quite a bit:
-\newfontfamily{\lm}[%
+\newfontfamily{\lm}[
     Ligatures=TeX,
     SmallCapsFont = * Caps
 ]{Latin Modern Roman}
+\newfontfamily{\lt}{Latin Modern Mono}
 
 \usepackage{polyglossia}
 \setdefaultlanguage[variant=american]{english}
