--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -168,23 +168,23 @@ environment from the \texttt{multicol} package:
 One nice feature of \texttt{multicol} is that you can
 combine arbitrary layouts.
 \begin{multicols}{2}
-In this example we start with one column,
-then create a short section with two.
+This example starts with one column,
+then sets a short section as two.
 The \texttt{multicols} environment splits the text
-so that each column is about the same height.
+inside it so that each column is about the same height.
 \end{multicols}
 \end{lstlisting}
 \end{leftfigure}
 is split into
 \begin{leftfigure}
 \lm%
-One nice feature of \texttt{multicol} is that you can
+One nice feature of {\lt multicol} is that you can
 combine arbitrary layouts.
 \begin{multicols}{2}
-In this example we start with one column,
-then create a short section with two.
-The \texttt{multicols} environment splits the text
-so that each column is about the same height.
+This example starts with one column,
+then sets a short section as two.
+The \mbox{\lt multicols} environment splits the text
+inside it so that each column is about the same height.
 \end{multicols}
 \end{leftfigure}
 
