Fix flushleftfigure environment

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -227,7 +227,7 @@
 % Like the above, but with no adjustwidth
 \newenvironment{flushleftfigure}
   {\par\vspace{0.5\baselineskip minus 0.3\baselineskip}}
-  {\vspace*{0.5\baselineskip minus 0.3\baselineskip}}
+  {\vspace*{0.5\baselineskip minus 0.3\baselineskip}\par\noindent\ignorespacesafterend}
 
 \newenvironment{centerfigure}
   {\par\vspace{0.5\baselineskip minus 0.3\baselineskip}\begin{adjustwidth}{1.5em}{1.5em}\centering}
